# nautilus-edit-with-vim

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  nautilus-edit-with-vim.schemas.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: README.Debian  changelog  control  copyright  rules
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  en_GB.po
src/: Makefile  Makefile.am  Makefile.in  edit-with-vim.c  edit-with-vim.lo  eel-gnome-extensions.c  eel-gnome-extensions.lo  libnautilus-edit-with-vim.la  nautilus-edit-with-vim.c  nautilus-edit-with-vim.h  nautilus-edit-with-vim.lo
src/.deps/: edit-with-vim.Plo  eel-gnome-extensions.Plo  nautilus-edit-with-vim.Plo
src/.libs/: libnautilus-edit-with-vim.la  libnautilus-edit-with-vim.lai
